--- a/index.html
+++ b/index.html
@@ -6,26 +6,8 @@
 </head>
 <body>
     <h1>VULTURES</h1>
-    <p>    Visual: large-winged aerial units; mimic vultures to blend into environment. No biological components.
-
-    Transmission: multi-channel pulse sequences emitted intermittently. Signals utilize spread-spectrum techniques.
-
-    Encoding: hybrid cryptographic layering. Base signal modulated by temporal displacement and frequency hopping.
-
-    Message payload fragmented into micro-bursts; reassembled via synchronized key at receiver.
-
-    Flight patterns integral: angular velocity and circling radius encode supplementary data bits.
-
-    Overlapping signals serve dual purpose—message multiplexing and obfuscation.
-
-    Signal decoding requires dynamic key derivation tied to environmental variables (e.g., wind speed, magnetic anomalies).
-
-    False positives common without real-time cross-referencing with secondary “vulture” network nodes.
-
-    Operational security: complete signal blackouts scheduled periodically to reset detection baseline.
-
-    System optimized for covert transmission in hostile surveillance zones.
-
+    <p>    Vultures operate as airborne relays.
+        Signal pulses + flight patterns = encrypted data.
 </p>
 </body>
 </html>
