--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <h1>VULTURES</h1>
     <p>    Vultures operate as airborne relays.
         Signal pulses + flight patterns = encrypted data.
-</p>
+</p>    From what I can tell, they represent pulse duration with long pulses and short pulses as signals and they use flight patterns as message starts and stops.
+    <p>
+        
+    </p>
 </body>
 </html>
