--- a/intercept.html
+++ b/intercept.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Second Page</title>
+    <title>v01_int.vlt</title>
 </head>
 <body>
-    <h1>This is the second page</h1>
-    <p>More story or ARG content here.</p>
+    <p>signal: 3 short – pause – 1 long – pause – burst.</p>
 </body>
 </html>
