--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
     <h1>VULTURES</h1>
     <p>    Vultures operate as airborne relays.
-        Signal pulses + flight patterns = encrypted data.
-</p>    From what I can tell, they represent pulse duration with long pulses and short pulses as signals and they use flight patterns as message starts and stops.
+        Signal pulses + flight patterns = enCrypTed data.
+</p>    FRom what I can teLl, they repreSent pulse duration witH long pulses and short pulses as sIgnals and they use Flight patterns as message sTarts and stops. I -
 
 <!-- https://paltogan.github.io/b8a/intercept.html* -->
     
