--- a/intercept.html
+++ b/intercept.html
@@ -4,6 +4,7 @@
     <title>v01_int.vlt</title>
 </head>
 <body>
-    <p>signal: 3 short – pause – 1 long – pause – burst.</p>
+    <p>signal: 3 short – pause – 1 long – pause – burst.
+    pattern: CCW loop → hover → sharp climb</p>
 </body>
 </html>
