--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>VULTURES</title>
 </head>
-<body>
+<body style="background-color: #DB2223;">
     <h1>VULTURES</h1>
     <p>    Vultures operate as airborne relays.
         Signal pulses + flight patterns = enCrypTed data.
