--- a/intercept.html
+++ b/intercept.html
@@ -4,7 +4,18 @@
     <title>v01_int.vlt</title>
 </head>
 <body>
-    <p>signal: 3 short – pause – 1 long – pause – burst.
-    pattern: CCW loop → hover → sharp climb</p>
+    <p>signal: A looser loop: .- / .-. --- ..- --. . .-.-.- / .-- .... .- - / ... .... --- ..- .-.. -.. / .-- . / -.. --- ..--..  Then a clockwise, tighter loop: - .... . / -- .-.-.- --. .-.-.- ..--.. / --- -. / .. - .-.-.- As they said the last bit of morse, they lowered the V.U.T.U.R.E, and a static filled my head</p>
+    <p>Signal Pulses: These are rapid bursts of electromagnetic energy, either in visible light (for close observers) or in narrow infrared bands (for long-range reception). I have found they use morse code for this
+
+
+NOTES:        
+Flight Patterns: Each drone's movement acts as a second communication layer. For instance:
+    Clockwise circles may indicate affirmation or confirmation of a received message.
+
+    Counterclockwise spirals could signal distress or require backup.
+
+    Tight spirals tend signify urgency, while wider loops suggest routine transmission.
+
+    Altitude shifts may encode meta-data—such as intended recipient class or encryption level.</p>
 </body>
 </html>
