--- a/intercept.html
+++ b/intercept.html
@@ -4,7 +4,7 @@
     <title>v01_int.vlt</title>
 </head>
 <body>
-    <p>signal: A looser loop: .- / .-. --- ..- --. . .-.-.- / .-- .... .- - / ... .... --- ..- .-.. -.. / .-- . / -.. --- ..--..  Then a clockwise, tighter loop: - .... . / -- .-.-.- --. .-.-.- ..--.. / --- -. / .. - .-.-.- As they said the last bit of morse, they lowered the V.U.T.U.R.E, and a static filled my head</p>
+    <p>signal: A looser loop: .- / .-. --- ..- --. . .-.-.- / .-- .... .- - / ... .... --- ..- .-.. -.. / .-- . / -.. --- ..--..  Then a clockwise, tighter loop: - .... . / -- .-.-.- --. .-.-.- ..--.. / --- -. / .. - .-.-.- As they said the last bit of morse, they lowered the V.U.T.U.R.E, and a static filled my head. I proceeded to escape.</p>
     <p>Notes:
 
     .Signal Pulses: These are rapid bursts of electromagnetic energy, either in visible light (for close observers) or in narrow infrared bands (for long-range reception). I have found they use morse code for this
