--- a/ddos.html
+++ b/ddos.html
@@ -1,2 +1,2 @@
 I am planning a DDOS on their website. I know a guy who can.
-<a href="https://paltogan.github.io/.vlt/#" style="color: white;">ㅤㅤㅤㅤㅤ</a>
+<a href="https://paltogan.github.io/.vlt/#" style="color: white;">ㅤㅤㅤㅤㅤ.vlt</a>
