--- a/intercept.html
+++ b/intercept.html
@@ -4,15 +4,5 @@
     <title>v01_int.vlt</title>
 </head>
 <body>
-    <p>signal: A looser loop: .- / .-. --- ..- --. . .-.-.- / .-- .... .- - / ... .... --- ..- .-.. -.. / .-- . / -.. --- ..--..  Then a clockwise, tighter loop: - .... . / -- .-.-.- --. .-.-.- ..--.. / --- -. / .. - .-.-.- As they said the last bit of morse, they lowered the V.U.T.U.R.E, and a static filled my head. I proceeded to escape.</p>
-    <p>Notes:
-
-    .Signal Pulses: These are rapid bursts of electromagnetic energy, either in visible light (for close observers) or in narrow infrared bands (for long-range reception). I have found they use morse code for this
-    .Flight Patterns: Each drone's movement acts as a second communication layer. For instance:
-   
-    .Clockwise circles may indicate affirmation or confirmation of a received message.
-    .Counterclockwise spirals could signal distress or require backup.
-    .Tight spirals tend signify urgency, while wider loops suggest routine transmission.
-    .Altitude shifts may encode meta-data—such as intended recipient class or encryption level.</p>
-</body>
+    <p>Signal: A looser loop: .- / .-. --- ..- --. . .-.-.- / .-- .... .- - / ... .... --- ..- .-.. -.. / .-- . / -.. --- ..--..  Then a clockwise, tighter loop: - .... . / -- .-.-.- --. .-.-.- ..--.. / --- -. / .. - .-.-.- As they said the last bit of morse, they lowered the V.U.T.U.R.E. Static is filling my head</p>
 </html>
