--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>VULTURES</title>
-    <goto>https://paltogan.github.io/b8a/undstndgvultcomm</goto>
+    <!--<metadata>https://paltogan.github.io/b8a/undstndgvultcomm</metadata>-->
 </head>
 <body style="background-color: #DB2223;">
     <h1>VULTURES</h1>
